--- a/runners/flink/examples/pom.xml
+++ b/runners/flink/examples/pom.xml
@@ -78,6 +78,12 @@
       <version>${flink.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-connector-twitter_2.10</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
